src/main/java/io/xjava/wasm/parser/WatParser.java
// Generated from WatParser.g4 by ANTLR 4.9.3

package io.xjava.wasm.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WatParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEFT_PAREN=1, RIGHT_PAREN=2, INTEGER=3, FLOAT=4, STRING=5, ID=6, NUM_TYPE=7, 
		VEC_TYPE=8, REF_TYPE=9, VEC_SHAPE=10, NUM_LOAD=11, NUM_STORE=12, VEC_LOAD=13, 
		VEC_LOAD_LANE=14, VEC_STORE=15, VEC_STORE_LANE=16, MEM_OFFSET=17, MEM_ALIGN=18, 
		INT_CONST=19, FLOAT_CONST=20, NUM_INSTR=21, VEC_CONST=22, VEC_SHUFFLE=23, 
		VEC_LANE_INSTR=24, VEC_INSTR=25, BLOCK=26, BR=27, BR_IF=28, BR_TABLE=29, 
		CALL=30, CALL_INDIRECT=31, DATA=32, DATA_DROP=33, DECLARE=34, DROP=35, 
		ELEM=36, ELEM_DROP=37, ELSE=38, END=39, EXPORT=40, EXTERN=41, FUNC=42, 
		GLOBAL=43, GLOBAL_GET=44, GLOBAL_SET=45, IF=46, IMPORT=47, ITEM=48, LOCAL=49, 
		LOCAL_GET=50, LOCAL_SET=51, LOCAL_TEE=52, LOOP=53, MEMORY=54, MEMORY_COPY=55, 
		MEMORY_FILL=56, MEMORY_GROW=57, MEMORY_INIT=58, MEMORY_SIZE=59, MODULE=60, 
		MUT=61, NOP=62, OFFSET=63, PARAM=64, REF_FUNC=65, REF_IS_NULL=66, REF_NULL=67, 
		RESULT=68, RETURN=69, SELECT=70, START=71, TABLE=72, TABLE_COPY=73, TABLE_FILL=74, 
		TABLE_GET=75, TABLE_GROW=76, TABLE_INIT=77, TABLE_SET=78, TABLE_SIZE=79, 
		THEN=80, TYPE=81, UNREACHABLE=82, ASSERT_EXHAUSTION=83, ASSERT_INVALID=84, 
		ASSERT_MALFORMED=85, ASSERT_RETURN=86, ASSERT_TRAP=87, ASSERT_UNLINKABLE=88, 
		BINARY=89, GET=90, INPUT=91, INVOKE=92, NAN_ARITHMETIC=93, NAN_CANONICAL=94, 
		OUTPUT=95, QUOTE=96, REF_EXTERN=97, REGISTER=98, SCRIPT=99, SPACE=100, 
		LINE_COMMENT=101, BLOCK_COMMENT=102;
	public static final int
		RULE_id = 0, RULE_index = 1, RULE_typeIndex = 2, RULE_functionIndex = 3, 
		RULE_tableIndex = 4, RULE_memoryIndex = 5, RULE_globalIndex = 6, RULE_elementIndex = 7, 
		RULE_dataIndex = 8, RULE_localIndex = 9, RULE_labelIndex = 10, RULE_name = 11, 
		RULE_dataString = 12, RULE_number = 13, RULE_refType = 14, RULE_heapType = 15, 
		RULE_valueType = 16, RULE_vecType = 17, RULE_vecShape = 18, RULE_funcType = 19, 
		RULE_result = 20, RULE_param = 21, RULE_local = 22, RULE_memType = 23, 
		RULE_tableType = 24, RULE_globalType = 25, RULE_label = 26, RULE_blockType = 27, 
		RULE_memArg = 28, RULE_blockInstr = 29, RULE_plainInstr = 30, RULE_controlInstr = 31, 
		RULE_referenceInstr = 32, RULE_parametricInstr = 33, RULE_variableInstr = 34, 
		RULE_tableInstr = 35, RULE_memoryInstr = 36, RULE_numericInstr = 37, RULE_vectorInstr = 38, 
		RULE_instr = 39, RULE_expr = 40, RULE_module = 41, RULE_moduleField = 42, 
		RULE_type = 43, RULE_func = 44, RULE_table = 45, RULE_mem = 46, RULE_global = 47, 
		RULE_moduleImport = 48, RULE_moduleExport = 49, RULE_start = 50, RULE_elem = 51, 
		RULE_data = 52, RULE_offset = 53, RULE_item = 54, RULE_inlineImport = 55, 
		RULE_inlineExport = 56, RULE_memUse = 57, RULE_tableUse = 58, RULE_typeUse = 59, 
		RULE_funcDesc = 60, RULE_tableDesc = 61, RULE_memDesc = 62, RULE_globalDesc = 63, 
		RULE_importDesc = 64, RULE_exportDesc = 65, RULE_elemList = 66, RULE_script = 67, 
		RULE_command = 68, RULE_scriptModule = 69, RULE_action = 70, RULE_register = 71, 
		RULE_scriptConst = 72, RULE_assertion = 73, RULE_scriptResult = 74, RULE_numPat = 75, 
		RULE_meta = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"id", "index", "typeIndex", "functionIndex", "tableIndex", "memoryIndex", 
			"globalIndex", "elementIndex", "dataIndex", "localIndex", "labelIndex", 
			"name", "dataString", "number", "refType", "heapType", "valueType", "vecType", 
			"vecShape", "funcType", "result", "param", "local", "memType", "tableType", 
			"globalType", "label", "blockType", "memArg", "blockInstr", "plainInstr", 
			"controlInstr", "referenceInstr", "parametricInstr", "variableInstr", 
			"tableInstr", "memoryInstr", "numericInstr", "vectorInstr", "instr", 
			"expr", "module", "moduleField", "type", "func", "table", "mem", "global", 
			"moduleImport", "moduleExport", "start", "elem", "data", "offset", "item", 
			"inlineImport", "inlineExport", "memUse", "tableUse", "typeUse", "funcDesc", 
			"tableDesc", "memDesc", "globalDesc", "importDesc", "exportDesc", "elemList", 
			"script", "command", "scriptModule", "action", "register", "scriptConst", 
			"assertion", "scriptResult", "numPat", "meta"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", null, null, null, null, null, "'v128'", null, null, 
			null, null, null, null, "'v128.store'", null, null, null, null, null, 
			null, "'v128.const'", "'i8x16.shuffle'", null, null, "'block'", "'br'", 
			"'br_if'", "'br_table'", "'call'", "'call_indirect'", "'data'", "'data.drop'", 
			"'declare'", "'drop'", "'elem'", "'elem.drop'", "'else'", "'end'", "'export'", 
			"'extern'", "'func'", "'global'", "'global.get'", "'global.set'", "'if'", 
			"'import'", "'item'", "'local'", "'local.get'", "'local.set'", "'local.tee'", 
			"'loop'", "'memory'", "'memory.copy'", "'memory.fill'", "'memory.grow'", 
			"'memory.init'", "'memory.size'", "'module'", "'mut'", "'nop'", "'offset'", 
			"'param'", "'ref.func'", "'ref.is_null'", "'ref.null'", "'result'", "'return'", 
			"'select'", "'start'", "'table'", "'table.copy'", "'table.fill'", "'table.get'", 
			"'table.grow'", "'table.init'", "'table.set'", "'table.size'", "'then'", 
			"'type'", "'unreachable'", "'assert_exhaustion'", "'assert_invalid'", 
			"'assert_malformed'", "'assert_return'", "'assert_trap'", "'assert_unlinkable'", 
			"'binary'", "'get'", "'input'", "'invoke'", "'nan:arithmetic'", "'nan:canonical'", 
			"'output'", "'quote'", "'ref.extern'", "'register'", "'script'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LEFT_PAREN", "RIGHT_PAREN", "INTEGER", "FLOAT", "STRING", "ID", 
			"NUM_TYPE", "VEC_TYPE", "REF_TYPE", "VEC_SHAPE", "NUM_LOAD", "NUM_STORE", 
			"VEC_LOAD", "VEC_LOAD_LANE", "VEC_STORE", "VEC_STORE_LANE", "MEM_OFFSET", 
			"MEM_ALIGN", "INT_CONST", "FLOAT_CONST", "NUM_INSTR", "VEC_CONST", "VEC_SHUFFLE", 
			"VEC_LANE_INSTR", "VEC_INSTR", "BLOCK", "BR", "BR_IF", "BR_TABLE", "CALL", 
			"CALL_INDIRECT", "DATA", "DATA_DROP", "DECLARE", "DROP", "ELEM", "ELEM_DROP", 
			"ELSE", "END", "EXPORT", "EXTERN", "FUNC", "GLOBAL", "GLOBAL_GET", "GLOBAL_SET", 
			"IF", "IMPORT", "ITEM", "LOCAL", "LOCAL_GET", "LOCAL_SET", "LOCAL_TEE", 
			"LOOP", "MEMORY", "MEMORY_COPY", "MEMORY_FILL", "MEMORY_GROW", "MEMORY_INIT", 
			"MEMORY_SIZE", "MODULE", "MUT", "NOP", "OFFSET", "PARAM", "REF_FUNC", 
			"REF_IS_NULL", "REF_NULL", "RESULT", "RETURN", "SELECT", "START", "TABLE", 
			"TABLE_COPY", "TABLE_FILL", "TABLE_GET", "TABLE_GROW", "TABLE_INIT", 
			"TABLE_SET", "TABLE_SIZE", "THEN", "TYPE", "UNREACHABLE", "ASSERT_EXHAUSTION", 
			"ASSERT_INVALID", "ASSERT_MALFORMED", "ASSERT_RETURN", "ASSERT_TRAP", 
			"ASSERT_UNLINKABLE", "BINARY", "GET", "INPUT", "INVOKE", "NAN_ARITHMETIC", 
			"NAN_CANONICAL", "OUTPUT", "QUOTE", "REF_EXTERN", "REGISTER", "SCRIPT", 
			"SPACE", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WatParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WatParser.ID, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WatParser.ID, 0); }
		public TerminalNode INTEGER() { return getToken(WatParser.INTEGER, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndexContext index() throws RecognitionException {
		IndexContext _localctx = new IndexContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_index);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public TypeIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitTypeIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeIndexContext typeIndex() throws RecognitionException {
		TypeIndexContext _localctx = new TypeIndexContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public FunctionIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitFunctionIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionIndexContext functionIndex() throws RecognitionException {
		FunctionIndexContext _localctx = new FunctionIndexContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public TableIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitTableIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableIndexContext tableIndex() throws RecognitionException {
		TableIndexContext _localctx = new TableIndexContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tableIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemoryIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public MemoryIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memoryIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitMemoryIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MemoryIndexContext memoryIndex() throws RecognitionException {
		MemoryIndexContext _localctx = new MemoryIndexContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_memoryIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public GlobalIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitGlobalIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalIndexContext globalIndex() throws RecognitionException {
		GlobalIndexContext _localctx = new GlobalIndexContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_globalIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public ElementIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitElementIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementIndexContext elementIndex() throws RecognitionException {
		ElementIndexContext _localctx = new ElementIndexContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elementIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public DataIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitDataIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataIndexContext dataIndex() throws RecognitionException {
		DataIndexContext _localctx = new DataIndexContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dataIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public LocalIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitLocalIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalIndexContext localIndex() throws RecognitionException {
		LocalIndexContext _localctx = new LocalIndexContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_localIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelIndexContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public LabelIndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelIndex; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitLabelIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelIndexContext labelIndex() throws RecognitionException {
		LabelIndexContext _localctx = new LabelIndexContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_labelIndex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			index();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WatParser.STRING, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataStringContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(WatParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(WatParser.STRING, i);
		}
		public DataStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataString; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WatParserVisitor ) return ((WatParserVisitor<? extends T>)visitor).visitDataString(this);
			else return visitor.visitChildren(this);
		}
	}
